dashboard/legacy/istio-components/expose-istio-grafana-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 15031
      name: http-grafana
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - grafana-gateway
  http:
  - match:
    - port: 15031
    route:
    - destination:
        host: grafana
        port:
          number: 3000
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: grafana-vs
#   namespace: istio-system
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - grafana-gateway
#   http:
#   - match:
#     - method:
#         exact: GET
#       uri:
#         prefix: /istio/grafana/
#     rewrite:
#       uri: /
#     route:
#     - destination:
#         host: grafana.istio-system.svc.cluster.local
#         port:
#           number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: istio-system
spec:
  host: grafana
  trafficPolicy:
    tls:
      mode: DISABLE
---
